@@ -1,5 +1,15 @@
 2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>
 
+	* src/tracker-indexer/tracker-main.c:
+	* src/trackerd/tracker-main.c:
+	* src/libtracker-db/tracker-db-manager.c:
+	* src/libtracker-db/tracker-db-manager.h:
+
+	tracker_db_manager_shutdown must not remove the directory in tmp with
+	cache.db in case the indexer calls it.
+
+2008-06-24  Philip Van Hoof  <pvanhoof@gnome.org>
+
 	src/tracker-indexer/tracker-indexer.c: The table Events for
 	tracker_db_create_event only exists in cache.db, not in common.db,
 	therefore patched it to use a priv->cache instead of priv->common
